--- a/skins/theme/dtml/it/footer.html
+++ b/skins/theme/dtml/it/footer.html
@@ -1,5 +1,69 @@
-<!----start-footer--->
-<div class="footer">
-    <p>Design by <a href="http://w3layouts.com/">W3layouts</a></p>
-</div>
-<!----//End-footer--->
+<!-- Footer -->
+<footer class="main-footer">
+    <div class="container">
+        <div class="row">	
+            <div class="widget col-md-3">
+                <div class="about">
+                    <h2 class="title">About <span class="border"></span></h2>
+                    <p>Vivamus ante nulla, ultrices ut molestie pellentesque, posuere eu ligula. In porttitor in turpis eu porttitor. </p> 
+                </div>
+                <ul class="fa-ul">
+                    <li><i class="fa-li fa fa-map-marker"></i>1600 Pennsylvania Ave NW,
+                        Washington, D.C., DC 20500, ABD</li>
+                    <li> <i class="fa-li fa fa-phone fa-flip-horizontal"></i>+90 555 55 55</li>
+                    <li><i class="fa-li fa fa-envelope-o "></i><a href="#">info@example.com</a></li>
+                </ul>           
+            </div>
+
+            <div class="widget col-md-3">
+                <h2 class="title">Recent Blog Posts<span class="border"></span></h2>
+                <div class="recent-blog">
+                    <div class="recent-img">
+                        <img src="skins/theme/img/70x70.gif" alt="">
+                    </div>
+                    <div class="recent-content">
+                        <h3 class="title"><a href="#"> Lorem ipsum dolor sit amet consectetur. </a> </h3>
+                        <p class="date"><i class="icon fa fa-calendar"></i>October 24th, 2013</p>
+                        <p class="comment"><i class="icon fa fa-comment"></i><a href="#">23 Comments</a></p>
+                    </div>
+                </div>
+
+                <div class="recent-blog">
+                    <div class="recent-img">
+                        <img src="skins/theme/img/70x70.gif" alt="">
+                    </div>
+                    <div class="recent-content">
+                        <h3 class="title"><a href="#"> Lorem ipsum dolor sit amet consectetur. </a> </h3>
+                        <p class="date"><i class="icon fa fa-calendar"></i>October 24th, 2013</p>
+                        <p class="comment"><i class="icon fa fa-comment"></i><a href="#">23 Comments</a></p>
+                    </div>
+                </div>
+
+                <div class="recent-blog">
+                    <div class="recent-img">
+                        <img src="skins/theme/img/70x70.gif" alt="">
+                    </div>
+                    <div class="recent-content">
+                        <h3 class="title"><a href="#"> Lorem ipsum dolor sit amet consectetur. </a> </h3>
+                        <p class="date"><i class="icon fa fa-calendar"></i>October 24th, 2013</p>
+                        <p class="comment"><i class="icon fa fa-comment"></i><a href="#">23 Comments</a></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="widget lastest-tweets col-md-3">
+                <h2 class="title">Lastest Tweets<span class="border"></span></h2>
+
+                <ul class="fa-ul twitters"></ul>
+
+            </div>
+
+            <div class="widget col-md-3">
+                <h2 class="title">Flickr Photos<span class="border"></span></h2>
+                <div class="flicker flickrwidget"></div>
+
+
+            </div>
+        </div> 
+    </div>
+</footer>     
