--- a/skins/theme/dtml/it/header.html
+++ b/skins/theme/dtml/it/header.html
@@ -1,35 +1,88 @@
-<!---start-header---->
-<div class="header">
-    <div class="wrap">
-        <div class="logo">
-            <a href="index.php"><img src="skins/theme/images/logo.png" title="pinbal" /></a>
-        </div>
-        <div class="nav-icon">
-            <a href="#" class="right_bt" id="activator"><span> </span> </a>
-        </div>
-        <div class="box" id="box">
-            <div class="box_content">        					                         
-                <div class="box_content_center">
-                    <div class="form_content">
-                        {$menu}
-                        <a class="boxclose" id="boxclose"> <span> </span></a>
-                    </div>                                  
-                </div> 	
+<!--[if lt IE 7]>
+<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
+
+<!-- Header -->
+<header class="header-container">
+    <div class="header-top">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <ul class="login-details clearfix">
+                        <li><a href="#" class="agenticon">Agent Login</a></li>
+                        <li><a href="#" class="customericon">Customer Login</a></li>
+                        <li><a href="#" class="membericon">Not a Member?</a></li>
+                        <li><a href="#" class="pri-color">Register Now</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <div class="social-icon pull-right">
+                        <a href="#" class="facebook fa fa-facebook"></a>
+                        <a href="#" class="twitter fa fa-twitter"></a>
+                        <a href="#" class="googleplus fa fa-google-plus"></a>
+                        <a href="#" class="dribble fa fa-dribbble"> </a>
+                    </div>
+                </div>
             </div> 
-        </div>       	  
-        <div class="top-searchbar">
-            <form>
-                <input type="text" /><input type="submit" value="" />
-            </form>
-        </div>
-        <div class="userinfo">
-            <div class="user">
-                <ul>
-                    <li><a href="#"><img src="skins/theme/images/user-pic.png" title="user-name" /><span>Ipsum</span></a></li>
-                </ul>
+        </div>     
+    </div>
+    <!-- Main Header  -->
+    <div class="main-header affix">
+
+        <!-- Moblie Nav Wrapper  -->
+        <div class="mobile-nav-wrapper">
+            <div class="container ">
+
+                <!-- logo  -->
+                <div id="logo">
+                    <a href="index.htm"><img src="skins/theme/img/logo.png" alt=""></a> 
+                </div>
+
+                <div id="sb-search" class="sb-search">
+                    <form>
+                        <input class="sb-search-input" placeholder="Search" type="text" name="search" id="search">
+                        <input class="sb-search-submit" type="submit" value="">
+                        <span class="sb-icon-search"></span>
+                    </form>
+                </div>
+                <!-- moblie-menu-icon -->
+
+                <div class="mobile-menu-icon">
+                    <i class="fa fa-bars"></i>
+                </div> 
+
+                <!-- Nav --> 
+                <nav class="main-nav mobile-menu">
+
+                    <ul class="clearfix">
+                        <li id="main-nav-home"><a href="index.php">Home</a></li>
+
+                        <li class="parent"><a href="#">Events</a>
+                            <!-- Sub memu -->
+                            <ul class="sub-menu">
+                                <li class="arrow"></li>
+                                <li><a href="event.html">Event</a></li>
+                                <li><a href="event-sidebar-left.html">Event-Sidebar-Left</a></li>
+                                <li><a href="event-sidebar-right.html">Event-Sidebar-Right</a></li>
+                                <li><a href="event-detail.html">Event Detail</a></li>
+                            </ul>
+                        </li>
+
+                        <li><a href="#">Directions</a></li>
+                        <li><a href="event-tv.html">Events TV</a></li>
+                        <li class="parent"><a href="event-blog.html">Blog</a>
+                            <!-- Sub memu -->
+                            <ul class="sub-menu">
+                                <li class="arrow"></li>
+                                <li><a href="event-blog.html">Event Blog</a></li>
+                                <li><a href="event-single-blog.html">Event Single-Blog</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
-        <div class="clear"> </div>
     </div>
-</div>
-<!---//End-header---->
+</header> <!-- header -->  
