--- a/skins/theme/dtml/it/frame-public.html
+++ b/skins/theme/dtml/it/frame-public.html
@@ -1,10 +1,18 @@
 <html>
-{$head}
-<!--This line shows the menu-->
-{$menu}
-<body>
-{$header}
-{$body}
-{$footer}
-</body>
-</html>
+    <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+    <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+    <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+    <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+        {$head}
+        <!--This line shows the menu-->
+        {$menu}
+        <body>
+            {$header}
+            {$body}
+            {$footer}
+
+            <script src="skins/theme/js/vendor/jquery-1.10.2.min.js"></script>
+            <script src="skins/theme/js/plugins.js"></script>
+            <script src="skins/theme/js/main.js"></script>
+        </body>
+    </html>
