--- a/skins/theme/dtml/it/home.html
+++ b/skins/theme/dtml/it/home.html
@@ -122,89 +122,9 @@
             <div id="tabs-1">
                 <div class="event-container">
                     <div class="row">
-                        <div class="col-md-3">
                             
-                            {foreach from=$last_events item=event}
-                            <div class="event">
-                                <div class="eventsimg">
-                                    <img src="" alt="">
-                                </div>
-                                <div class="event-content">
-                                    <h3 class="title">{$event->title}</h3>
-                                    <p>{$event->body} [...] </p>
-                                    <a href="#" class="btn btn-pri">buy tıcket</a>
-                                </div>
-                                <div class="links clearfix">
-                                    <ul>
-                                        <li><a class='st_sharethis_large' displayText='ShareThis'><i class="icon fa fa-share"></i> share</a></li>
-                                        <li><a href="#"><i class="icon fa fa-heart"></i>26</a></li>
-                                        <li><a href="#" ><i class="icon fa fa-comment"></i>33</a> </li> 
-                                    </ul> 
-                                </div>
-                            </div>
-                            {/foreach}
-                            
-                        </div>
+                            {$last_events}
 
-                        <div class="col-md-3">
-                            <div class="event">
-                                <div class="eventsimg">
-                                    <img src="skins/theme/img/515x390.gif" alt="">
-                                </div>
-                                <div class="event-content">
-                                    <h3 class="title">Using Social Services Increase Your Sales </h3>
-                                    <p>Lorem ipsum dolor sit amet, feugiat delicata id cum, eu sit. [...] </p>
-                                    <a href="#" class="btn btn-disabled disabled">sold out</a>
-                                </div>
-                                <div class="links clearfix">
-                                    <ul>
-                                        <li><a class='st_sharethis_large' displayText='ShareThis'><i class="icon fa fa-share"></i> share</a></li>
-                                        <li><a href="#"><i class="icon fa fa-heart"></i>26</a></li>
-                                        <li><a href="#" ><i class="icon fa fa-comment"></i>33</a> </li> 
-                                    </ul> 
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-3">
-                            <div class="event">
-                                <div class="eventsimg">
-                                    <img src="skins/theme/img/515x390.gif" alt="">
-                                </div>
-                                <div class="event-content">
-                                    <h3 class="title">Using Social Services Increase Your Sales </h3>
-                                    <p>Lorem ipsum dolor sit amet, feugiat delicata id cum, eu sit. [...] </p>
-                                    <a href="#" class="btn btn-sec">Free Entry</a>
-                                </div>
-                                <div class="links clearfix">
-                                    <ul>
-                                        <li><a class='st_sharethis_large' displayText='ShareThis'><i class="icon fa fa-share"></i> share</a></li>
-                                        <li><a href="#"><i class="icon fa fa-heart"></i>26</a></li>
-                                        <li><a href="#" ><i class="icon fa fa-comment"></i>33</a> </li> 
-                                    </ul> 
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-3">
-                            <div class="event">
-                                <div class="eventsimg">
-                                    <img src="skins/theme/img/515x390.gif" alt="">
-                                </div>
-                                <div class="event-content">
-                                    <h3 class="title">Using Social Services Increase Your Sales </h3>
-                                    <p>Lorem ipsum dolor sit amet, feugiat delicata id cum, eu sit. [...] </p>
-                                    <a href="#" class="btn btn-pri">buy tıcket</a>
-                                </div>
-                                <div class="links clearfix">
-                                    <ul>
-                                        <li><a class='st_sharethis_large' displayText='ShareThis'><i class="icon fa fa-share"></i> share</a></li>
-                                        <li><a href="#"><i class="icon fa fa-heart"></i>26</a></li>
-                                        <li><a href="#" ><i class="icon fa fa-comment"></i>33</a> </li> 
-                                    </ul> 
-                                </div>
-                            </div>
-                        </div>
                     </div><!-- row -->
                 </div>
             </div>
