--- a/skins/theme/dtml/it/multiple/user_events_multiple.html
+++ b/skins/theme/dtml/it/multiple/user_events_multiple.html
@@ -1,5 +1,5 @@
 <div id="liveReport">
-	<!-- MODIFICA QUESTE LINEE-->
+	 MODIFICA QUESTE LINEE
 MULTIPLE TEMPLATE STANDARD; <h1>user_events</h1>{if $instances != null || $instance != null}
 <ul>
 {foreach from=$instances item=instance}
@@ -16,7 +16,6 @@ MULTIPLE TEMPLATE STANDARD; <h1>user_events</h1>{if $instances != null || $insta
 {else}
 <h1>NON CI SONO user_events</h1>
 {/if}
-<!-- MODIFICA QUESTELINEE-->
+ MODIFICA QUESTELINEE
 
 </div>
-
