--- a/skins/theme/dtml/it/header.html
+++ b/skins/theme/dtml/it/header.html
@@ -35,7 +35,7 @@
 
                 <!-- logo  -->
                 <div id="logo">
-                    <a href="index.htm"><img src="skins/theme/img/logo.png" alt=""></a> 
+                    <a href="index.php"><img src="skins/theme/img/logo.png" alt=""></a> 
                 </div>
 
                 <div id="sb-search" class="sb-search">
