--- a/skins/theme/dtml/it/home.html
+++ b/skins/theme/dtml/it/home.html
@@ -214,7 +214,7 @@
                     </div><!-- row -->
                 </div> 
             </div>
-            <a href="event.html" class="btn btn-border btn-lg">load more</a>
+            <a href="events.php" class="btn btn-border btn-lg">load more</a>
         </div>
     </div>  
 </section>
