--- a/skins/theme/dtml/it/header.html
+++ b/skins/theme/dtml/it/header.html
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <ul class="login-details clearfix">
-                        <li><a href="#" class="agenticon">Agent Login</a></li>
+                        <li><a href="admin.php" class="agenticon">Agent Login</a></li>
                         <li><a href="#" class="customericon">Customer Login</a></li>
                         <li><a href="#" class="membericon">Not a Member?</a></li>
                         <li><a href="#" class="pri-color">Register Now</a></li>
