--- a/skins/theme/dtml/it/event-detail.html
+++ b/skins/theme/dtml/it/event-detail.html
@@ -1,35 +1,10 @@
-<!--<div id="liveReport">
-	 MODIFICA QUESTE LINEE
-SINGLE TEMPLATE STANDARD; <h1>user_events</h1>
-{if $instances != null || $instance != null}
-<ul>
-<li>id: {$instance->id}</li>
-<li>owner: {$instance->owner->presentation}</li>
-<li>title: {$instance->title}</li>
-<li>lastmod: {$instance->lastmod}</li>
-<li>creation: {$instance->creation}</li>
-<li>date: {$instance->date}</li>
-<li>active: {$instance->active}</li>
-<li>body: {$instance->body}</li>
-</ul>
-{else}
-<h1>NON CI SONO user_events</h1>
-{/if}
-
- MODIFICA QUESTE LINEE
-
-</div>
--->
-
-
 <!-- Sub Banner -->
 <section class="sub-banner newsection">
     <div class="container">
-        <h2 class="title">Event Detail</h2>
+        <h2 class="title">Events</h2>
         <ul class="breadcrumb">
-           <li><a href="index.php">Home</a></li>
-            <li><a href="#">Events</a></li>
-            <li>Event Detail</li>
+            <li><a href="index.php">Home</a></li>
+            <li>Events</li>
         </ul>
     </div>
 </section>
@@ -57,6 +32,17 @@ SINGLE TEMPLATE STANDARD; <h1>user_events</h1>
                             </ul>
 
                             <p>{$instance->body}</p>
+
+                            <blockquote> 
+                                <div class="icon-quote">
+                                    <i class="fa fa-quote-left"></i>
+                                </div>
+                                <p>Pastry liquorice jelly icing. Halvah candy oat cake ice cream sweet roll gingerbread brownie. Marshmallow gingerbread gingerbread cake pie. Wafer sugar plum wafer muffin. Danish marshmallow gingerbread cookie. </p>
+                            </blockquote>
+
+                            <p>Pastry liquorice jelly icing. Halvah candy oat cake ice cream sweet roll gingerbread brownie. Marshmallow gingerbread gingerbread cake pie. Wafer sugar plum wafer muffin. Danish marshmallow gingerbread cookie. Candy donut cheesecake donut unerdwear.com danish sweet lemon drops.</p>
+
+                            <p>Cake applicake gummies chocolate bar jelly beans jelly beans cake. Liquorice unerdwear.com muffin dessert unerdwear.com tiramisu sweet roll unerdwear.com sweet roll. Sesame snaps tiramisu cake topping. Carrot cake macaroon sesame snaps dessert biscuit. Lemon drops jujubes biscuit. Bonbon gummi bears powder jelly lemon drops pudding pastry. </p>
 
                         </div>
                     </div>
@@ -204,6 +190,59 @@ SINGLE TEMPLATE STANDARD; <h1>user_events</h1>
                     <div class="widget tag">
                         <h3 class="title">Tags Widget</h3>  
                         <a href="#">Event</a><a href="#">Fashion</a><a href="#">Design</a><a href="#">Hotels</a><a href="#">Up Coming</a><a href="#">Venue</a><a href="#">Speaker</a><a href="#" class="last">Conference</a>
+                    </div>  
+
+                    <div class="widget">
+                        <h3 class="title">Testimonials</h3>  
+                        <div class="owl-testimonial owl-carousel owl-theme owl-loaded">
+
+
+
+
+
+                            <div class="owl-stage-outer" style="padding-left: 0px; padding-right: 0px;"><div class="owl-stage" style="width: 1530px; transition: 0.6s; -webkit-transition: 0.6s; transform: translate3d(-765px, 0px, 0px);"><div class="owl-item cloned" style="width: 235px; margin-right: 20px;"><div class="testimonials">
+                                            <div class="testimonials-content">
+                                                <p>Nullam facilisis metus quis nunc rhoncus fringilla. Donec nec nisl nisl, vel tincidunt urna. Donec erat erat, suscipit vitae tristique non. [...] </p>
+                                                <span class="arrow-down"></span>
+                                            </div>
+                                            <p class="name">by isamercan</p>
+                                            <small>User interface Designer</small>
+                                        </div></div><div class="owl-item" style="width: 235px; margin-right: 20px;"><div class="testimonials">
+                                            <div class="testimonials-content">
+                                                <p>Nullam facilisis metus quis nunc rhoncus fringilla. Donec nec nisl nisl, vel tincidunt urna. Donec erat erat, suscipit vitae tristique non. [...] </p>
+                                                <span class="arrow-down"></span>
+                                            </div>
+                                            <p class="name">by isamercan</p>
+                                            <small>User interface Designer</small>
+                                        </div></div><div class="owl-item" style="width: 235px; margin-right: 20px;"><div class="testimonials">
+                                            <div class="testimonials-content">
+                                                <p>Nullam facilisis metus quis nunc rhoncus fringilla. Donec nec nisl nisl, vel tincidunt urna. Donec erat erat, suscipit vitae tristique non. [...] </p>
+                                                <span class="arrow-down"></span>
+                                            </div>
+                                            <p class="name">by isamercan</p>
+                                            <small>User interface Designer</small>
+                                        </div></div><div class="owl-item active" style="width: 235px; margin-right: 20px;"><div class="testimonials">
+                                            <div class="testimonials-content">
+                                                <p>Nullam facilisis metus quis nunc rhoncus fringilla. Donec nec nisl nisl, vel tincidunt urna. Donec erat erat, suscipit vitae tristique non. [...] </p>
+                                                <span class="arrow-down"></span>
+                                            </div>
+                                            <p class="name">by isamercan</p>
+                                            <small>User interface Designer</small>
+                                        </div></div><div class="owl-item" style="width: 235px; margin-right: 20px;"><div class="testimonials">
+                                            <div class="testimonials-content">
+                                                <p>Nullam facilisis metus quis nunc rhoncus fringilla. Donec nec nisl nisl, vel tincidunt urna. Donec erat erat, suscipit vitae tristique non. [...] </p>
+                                                <span class="arrow-down"></span>
+                                            </div>
+                                            <p class="name">by isamercan</p>
+                                            <small>User interface Designer</small>
+                                        </div></div><div class="owl-item cloned" style="width: 235px; margin-right: 20px;"><div class="testimonials">
+                                            <div class="testimonials-content">
+                                                <p>Nullam facilisis metus quis nunc rhoncus fringilla. Donec nec nisl nisl, vel tincidunt urna. Donec erat erat, suscipit vitae tristique non. [...] </p>
+                                                <span class="arrow-down"></span>
+                                            </div>
+                                            <p class="name">by isamercan</p>
+                                            <small>User interface Designer</small>
+                                        </div></div></div></div></div>
                     </div>
 
                     <div class="widget news">
