--- a/skins/theme/dtml/it/header.html
+++ b/skins/theme/dtml/it/header.html
@@ -57,16 +57,7 @@
                     <ul class="clearfix">
                         <li id="main-nav-home"><a href="index.php">Home</a></li>
 
-                        <li class="parent"><a href="#">Events</a>
-                            <!-- Sub memu -->
-                            <ul class="sub-menu">
-                                <li class="arrow"></li>
-                                <li><a href="event.html">Event</a></li>
-                                <li><a href="event-sidebar-left.html">Event-Sidebar-Left</a></li>
-                                <li><a href="event-sidebar-right.html">Event-Sidebar-Right</a></li>
-                                <li><a href="event-detail.html">Event Detail</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="events.php">Events</a></li>
 
                         <li><a href="#">Directions</a></li>
                         <li><a href="event-tv.html">Events TV</a></li>
