--- a/skins/theme/dtml/it/multiple/user_events_multiple.html
+++ b/skins/theme/dtml/it/multiple/user_events_multiple.html
@@ -1,5 +1,5 @@
-<div id="liveReport">
-	 MODIFICA QUESTE LINEE
+<!--<div id="liveReport">
+         MODIFICA QUESTE LINEE
 MULTIPLE TEMPLATE STANDARD; <h1>user_events</h1>{if $instances != null || $instance != null}
 <ul>
 {foreach from=$instances item=instance}
@@ -18,4 +18,139 @@ MULTIPLE TEMPLATE STANDARD; <h1>user_events</h1>{if $instances != null || $insta
 {/if}
  MODIFICA QUESTELINEE
 
-</div>
+</div>-->
+
+<!-- Sub Banner -->
+<section class="sub-banner newsection">
+    <div class="container">
+        <h2 class="title">Events</h2>
+        <ul class="breadcrumb">
+            <li><a href="index.php">Home</a></li>
+             <li>Events</li>
+        </ul>
+    </div>
+</section>
+
+<!-- Events -->
+<section class="events newsection">
+    <div class="container">
+        <div class="row">
+            <div class="blog col-md-9">
+                <div class="clearfix">
+                    
+                    {foreach from=$instances item=instance}
+                    <div class="event-container clearfix">
+                        <div class="event clearfix">
+                            <div class="eventsimg">
+                                <img src="img/515x390.gif" alt="">
+                            </div>
+                            <div class="event-content">
+                                <h3 class="title"><a href="events.php?user_events_id={$instance->id}">{$instance->title}</a></h3>
+                                 <ul class="meta">
+                                    <li><a href="#"><i class="icon  fa  fa-microphone"></i>Meeting</a>
+                                    </li><li class="date"><i class="icon fa fa-calendar"></i>{$instance->date}</li>
+                                    <li><a href="#"><i class="icon fa fa-comment"></i> 19</a> </li>
+                                    <li><a href="#"><i class="icon fa fa-user"></i>by {$instance->owner->presentation}</a></li>
+                                </ul>
+                                <p>Nullam facilisis metus quis nunc rhoncus fringilla. Donec nec nisl nisl, vel tincidunt urna. Donec erat erat, suscipit vitae tristique non, posuere nec mi. In faucibus lobortis pharetra.. [...] </p>
+                                <a href="events.php?user_events_id={$instance->id}" class="btn btn-disabled">read more</a>
+                            </div>
+                        </div>
+                    </div>
+                    {/foreach}
+
+
+                    <ul class="pagination clearfix">
+                        <li class=""><a href="#"><i class="fa fa-angle-left"></i></a></li>
+                        <li class=""><a href="#">1</a></li>
+                        <li class=""><a href="#">2</a></li>
+                        <li class=""><a href="#">3</a></li>
+                        <li class=""><a href="#">4</a></li>
+                        <li class=""><a href="#">5</a></li>
+                        <li class=""><a href="#"><i class="fa fa-angle-right"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <aside id="aside" class="aside-bar-style-two clearfix">
+                    <div class="widget border-remove clearfix">
+                        <div class="eventform-con ">
+                            <form>
+                                <div class="form-input search-location">
+                                    <input type="text" placeholder="Search anything">
+                                   
+                                    <button class="icon fa fa-search"></button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
+                    <div class="widget clearfix">
+                        <h3 class="title">Top Popular Post</h3>
+                        <div class="top-ppost">
+                            <div class="date">
+                                <p><span>31</span>FEB</p>
+                            </div>
+                            <div class="content">
+                                <h4 class="title"><a href="#">Using Social Services Increase Your Sales </a></h4>
+                                <a href="#" class="meta"><i class="icon fa fa-map-marker"></i>Istanbul / TR</a>
+                            </div>
+                        </div>
+
+                        <div class="top-ppost">
+                            <div class="date">
+                                <p><span>31</span>FEB</p>
+                            </div>
+                            <div class="content">
+                                <h4 class="title"><a href="#">Using Social Services Increase Your Sales </a></h4>
+                                <a href="#" class="meta"><i class="icon fa fa-map-marker"></i>Istanbul / TR</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="widget clearfix">
+                        <h3 class="title">Filter by Price </h3>
+
+                        <div id="slider-range" class="ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all" aria-disabled="false"><div class="ui-slider-range ui-widget-header ui-corner-all" style="left: 20%; width: 70%;"></div><a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 20%;"></a><a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 90%;"></a></div>
+                        <div class="">  
+
+                            <p> <label for="amount">Price :</label>
+                                <input type="text" id="amount" style="border:0; color:#f6931f; font-weight:bold;"> </p>
+                                <a href="#" class="btn btn-disabled">FILTER</a> 
+                            </div>
+                        </div>
+
+                        <div class="widget categories">
+                            <h3 class="title">Filter by Categories</h3>
+                            <ul>
+                                <li><a href="#">Everything <span class="numbers">68</span></a></li>
+                                <li><a href="#">Art<span class="numbers">10</span></a></li>
+                                <li><a href="#">Classical &amp; Opera<span class="numbers">25</span></a></li>
+                                <li><a href="#">Classical<span class="numbers">30</span></a></li>
+                                <li><a href="#">Opera<span class="numbers">100</span></a></li>
+                                <li><a href="#">Comedy<span class="numbers">5</span></a></li>
+                            </ul>
+                        </div>
+
+                        <div class="widget tag">
+                            <h3 class="title">Tag</h3>  
+                            <a href="#">Event</a><a href="#">Fashion</a><a href="#">Design</a><a href="#">Hotels</a><a href="#">Up Coming</a><a href="#">Venue</a><a href="#">Speaker</a><a href="#" class="last">Conference</a>
+                        </div>
+
+                        <div class="widget news">
+                            <h3 class="title">Join Our Newsletter</h3>
+                            <form>
+                                <div class="form-group">
+                                    <input type="text" placeholder="Add Your Email" id="">
+                                    <button class="icon fa fa-paper-plane-o "></button>
+                                </div>
+                                <button class="btn btn-disabled">Sign Up</button>
+                            </form>
+                        </div>
+                    </aside>
+                </div>
+            </div> 
+        </div> 
+    </section>
