--- a/skins/theme/dtml/it/widget/last_events.html
+++ b/skins/theme/dtml/it/widget/last_events.html
@@ -5,7 +5,7 @@
             <img src="skins/theme/img/515x390.gif" alt="">
         </div>
         <div class="event-content">
-            <h3 class="title">title: {$instance->title} </h3>
+            <h3 class="title"><a href="events.php?user_events_id={$instance->id}">title: {$instance->title}</a></h3>
             <p>body: {$instance->body} </p>
             <a href="#" class="btn btn-pri">buy tıcket</a>
         </div>
