--- a/skins/theme/dtml/it/single/user_events_single.html
+++ b/skins/theme/dtml/it/single/user_events_single.html
@@ -53,10 +53,10 @@ SINGLE TEMPLATE STANDARD; <h1>user_events</h1>
 
 
                             <ul class="meta clearfix">
-                                <li><a href="#"><i class="icon fa  fa-music"></i>{$instance->categoria->presentation}</a>
+                                <li><a href="#"><i class="icon fa  fa-music"></i>{$instance->categoria->name}</a>
                                 </li><li class="date"><i class="icon fa fa-calendar"></i>{$instance->date}</li>
                                 <li><a href="#comments"><i class="icon fa fa-comment"></i> {$instance->user_comments|@count}</a> </li>
-                                <li><a href="#"><i class="icon fa fa-user"></i>by {$instance->owner->presentation}</a></li>
+                                <li><a href="#"><i class="icon fa fa-user"></i>by {$instance->owner->name}</a></li>
                             </ul>
 
                             <p>{$instance->body}</p>
