--- a/skins/theme/dtml/it/home.html
+++ b/skins/theme/dtml/it/home.html
@@ -76,9 +76,9 @@
             <div class="col-md-9 eventform-con">
                 <form>
                     <div class="form-input search-location">
-                        <input type="text" value="" placeholder="Select Location">
+                        <input type="text" value="" placeholder="Search Event">
                         <i class="icon icon-s fa fa-search"></i>
-                        <button class="icon fa fa-globe"></button>
+                        <!--<button class="icon fa fa-globe"></button>-->
                     </div>
 
                     <div class="form-input">
